# mwe-abseil-export

./: CMakeLists.txt  MyStaticLib.cpp  README.md  conanfile.txt
cmake/modules/: abseil-cpp.cmake
